--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
 
      
       - name: Set up node
-        uses: actions/setup-node@v3 # yet another helpful action that's already been created
+        uses: actions/setup-node@v3 
         with:
           node-version: "20.5.0"
 
@@ -56,3 +56,6 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+
+      - name: Test Coverage
+        uses: ArtiomTr/jest-coverage-report-action@v2
